# BMI-SWAN

./: README.md
bmi-swan/: CMakeLists.txt
bmi-swan/src/: CMakeLists.txt  Makefile  bmi_interoperability.f90  bmi_swan.f90  m_swan.f90  setup.py  swanbmi.pyx
swan/: Makefile  Makefile_old  SwanBmiComm.ftn90  swanmain.ftn  swanout1.ftn  swanparll.ftn  swanpre1.ftn  swmod2.ftn
